--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -12,7 +12,7 @@
 @media screen and (max-width: 576px) {
     .player {
         position: fixed;
-        top: 55%;  
+        top: 45%;
     } 
 }
 
