--- a/src/app/social/social.component.scss
+++ b/src/app/social/social.component.scss
@@ -13,16 +13,16 @@
 @media screen and (max-width: 576px) {
   .social {
     position: fixed;
-    top: 80%;  
+    top: 75%;
     display: flex;
     flex-direction: column;
-  } 
+  }
 }
 
 svg {
   width: 3rem;
   height: auto;
-  margin: 0 0.5em;
+  margin: 0.5em;
   fill: $grey;
   transition: 250ms;
   transition-timing-function: ease-in-out;
